Fix menu item spacing

--- a/admin-dev/themes/default/scss/partials/_nav.scss
+++ b/admin-dev/themes/default/scss/partials/_nav.scss
@@ -331,7 +331,7 @@
       }
 
       span {
-        padding-left: 1rem;
+        padding-left: 0.625rem;
       }
 
       .sub-tabs-arrow {
