--- a/admin-dev/themes/new-theme/scss/components/layout/_nav_bar.scss
+++ b/admin-dev/themes/new-theme/scss/components/layout/_nav_bar.scss
@@ -271,7 +271,7 @@
       }
 
       > .link {
-        padding-left: 1rem;
+        padding-left: 0.7rem;
         border-left: 0.25rem solid #25b9d7;
 
         .material-icons {
@@ -306,7 +306,7 @@
       }
 
       span {
-        padding-left: 1rem;
+        padding-left: 0.625rem;
       }
 
       .sub-tabs-arrow {
